tests/snapshots/query_execution_snapshots__small_data_query_error.snap
---
source: tests/query_execution_snapshots.rs
expression: error_info
---
"Small data query error: File not found: test_data/small_customers.csv"
