tests/snapshots/query_execution_snapshots__small_data_schema_customers.snap
---
source: tests/query_execution_snapshots.rs
expression: schema_snapshot
---
- - id
  - Int64
- - name
  - String
- - email
  - String
