tests/snapshots/query_execution_snapshots__small_data_schema_orders.snap
---
source: tests/query_execution_snapshots.rs
expression: schema_snapshot
---
- - customer_id
  - Int64
- - order_total
  - Float64
- - product
  - String
