tests/snapshots/query_execution_snapshots__source_validation_results.snap
---
source: tests/query_execution_snapshots.rs
expression: validation_results
---
- - customers
  - true
  - test_data/customers.csv
- - orders
  - true
  - test_data/orders.csv
