tests/snapshots/query_execution_snapshots__sum_aggregation_mapping.snap
---
source: tests/query_execution_snapshots.rs
expression: aggregation_details
---
- total_spent
- Sum
- - - orders
    - order_total
